--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terradharitri/sdk-web-wallet-provider",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Signing provider for dApps: DharitrI (Web) Wallet",
   "main": "out/index.js",
   "types": "out/index.d.js",
@@ -19,17 +19,17 @@
     "qs": "6.10.3"
   },
   "devDependencies": {
+    "@terradharitri/sdk-core": "0.1.9",
     "@types/chai": "4.2.11",
     "@types/mocha": "9.1.0",
     "@types/node": "17.0.23",
     "@types/qs": "6.9.7",
     "chai": "4.2.0",
-    "esmify": "2.1.1",
-    "mocha": "9.2.2",
+    "mocha": "11.1.0",
     "ts-node": "9.1.1",
-    "typescript": "4.1.2"
+    "typescript": "5.5.4"
   },
   "peerDependencies": {
-    "@terradharitri/sdk-core": "0.0.17"
+    "@terradharitri/sdk-core": "0.1.9"
   }
 }
